# 2020summer

./: Day01笔记.ipynb  Day03笔记.ipynb
Day02笔记/: Day02笔记.ipynb
Day04笔记/: Day04and05笔记.ipynb
QT/: Makefile  main.cpp
qt_opencv/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  cvdialog.cpp  cvdialog.h  cvvideo.cpp  cvvideo.h  main.cpp  main.pro  ui_video.h  video.ui
qt_opencv/debug/: main.ilk  moc_cvdialog.cpp  moc_cvvideo.cpp
qt_th/: Makefile  main.cpp  moc_thfish.cpp  thapp.cpp  thapp.h  thdialog.cpp  thdialog.h  thfish.cpp  thfish.h
torch04/: CMakeLists.txt  build.bat  lenet5.pt  lenets.pt  main.cpp  main.txt
torch05/: main.cpp
